log
Tue 23 Apr 2024 01:24:58 AM UTC: 
 tests:  0|6
total_score: 0/70
7df9e87
Tue 23 Apr 2024 01:27:31 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
85d5d6d
Tue 23 Apr 2024 01:34:01 AM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:14: error: ‘Pair’ has no member named ‘next’
   74 |     par = par->next;
      |              ^~
Compilation failed
d4a8a23
Tue 23 Apr 2024 01:34:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
183a76a
Tue 23 Apr 2024 01:36:00 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   76 |     map->current = par;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
4b04feb
Tue 23 Apr 2024 01:36:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   76 |     map->current = map->buckets[posicion+1] ;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
5d3d569
Tue 23 Apr 2024 01:37:05 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
d73f0c4
Tue 23 Apr 2024 01:37:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
65d7fcf
Tue 23 Apr 2024 01:37:39 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 10/70
ded6e5a
Tue 23 Apr 2024 01:38:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
aed407d
Tue 23 Apr 2024 01:39:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
458064d
Tue 23 Apr 2024 01:39:19 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
4b9e9db
Tue 23 Apr 2024 01:40:34 AM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d81560d
Tue 23 Apr 2024 01:40:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
178d4ea
Tue 23 Apr 2024 01:41:09 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:14: error: ‘Pair’ has no member named ‘next’
   75 |     par = par->next;
      |              ^~
Compilation failed
426d77d
Tue 23 Apr 2024 01:41:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
b4f2726
Tue 23 Apr 2024 01:43:14 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:17: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   76 |     map->buckets->current = posicion+1;
      |                 ^~
      |                 ->
Compilation failed
c998238
